--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,22 @@
             <artifactId>httpclient</artifactId>
             <version>4.5.11</version>
         </dependency>
+        <!-- selenium -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>23.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-java</artifactId>
+            <version>3.4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
